# OpenTranslator

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  alembic.ini  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  test_pipeline_fix.py  test_settings.py  tsconfig.node.json  tsconfig.web.json
backend/: config.py  main.py
backend/api/: characters.py  context.py  export.py  glossary.py  projects.py  questions.py  settings.py  startup.py  translate.py
backend/db/: database.py  models.py  vector_store.py
backend/db/migrations/: env.py
backend/detectors/: base.py  ja.py  ko.py  registry.py  zh.py
backend/export/: epub.py  html.py  plaintext.py
backend/llm/: prompts.py  providers.py  router.py
backend/pipeline/: ambiguity_detector.py  chapter_translator.py  context_gatherer.py  pipeline.py  post_processor.py  segmenter.py  translator.py
backend/utils/: __init__.py  instructions.py  logging.py  transliteration.py
docs/: architecture-plan.md
electron/ipc/: db-handlers.ts  file-handlers.ts  llm-handlers.ts
electron/main/: index.ts
electron/preload/: index.ts
scripts/: bump-version.js  check-version.js
src/renderer/: App.tsx  global.d.ts  index.html  styles.css
src/renderer/components/: AmbiguityHighlighter.tsx  ChapterNav.tsx  ChapterReviewPane.tsx  ContextBar.tsx  ContextPanel.tsx  EditorPane.tsx  ErrorBoundary.tsx  InstructionBox.tsx  LLMConfigForm.tsx  LoadingOverlay.tsx  QAPopup.tsx  StatusBar.tsx  TranslationCompletePopup.tsx  TranslationPane.tsx
src/renderer/hooks/: useLLM.ts  (+2 more)
(+18 files in other folders)
