[project]
name = "opentranslator-backend"
version = "0.2.0"
description = "AI-powered webnovel translation backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "chromadb>=0.4.0",
    "litellm>=1.40.0",
    "openai>=1.0.0",
    "langdetect>=1.0.9",
    "jieba>=0.42.1",
    "pydantic>=2.0.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
    "pypinyin>=0.49.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
